Remove extra white space by moving company logo into nav brand Fix nav menu not opening in mobile mode

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -25,9 +25,12 @@ body {
   .header {
     margin-bottom: 10px;
 
-    img#app-logo {
-      height: 80px;
-      margin: 10px;
+    .navbar-brand {
+      height: auto;
+      padding: 5px 5px 5px 0;
+      img#app-logo {
+        height: 60px;
+      }
     }
 
     .navbar {
